# ai_cli_assistant

./: .aiassistant.yaml  .coverage  .env  .env.example  .gitignore  CHANGELOG.md  ERRORS.md  LICENSE  README.md  assistant.py  config.py  coverage.xml  history.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  setup.py  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: agents.agent.md
.github/workflows/: release.yml  tests.yml
docs/: api.md  configuration.md  index.md  installation.md  usage.md
examples/: basic_usage.py  chat_session.py  custom_config.yaml
prompts/: base_prompt.txt
prompts/examples/: code_review.txt
scripts/: setup.ps1  setup.sh
src/ai_cli_assistant/: __init__.py  __main__.py  api.py  cli.py  config.py  history.py  ui.py
src/ai_cli_assistant/prompts/: base_prompt.txt
src/ai_cli_assistant/prompts/examples/: writing_assistant.txt
src/ai_cli_assistant/utils/: __init__.py  prompts.py
tests/: test_api.py  test_assistant.py  test_cli.py  test_config.py  test_history.py
